Split cluster and application protocols